# nlambda

./: betareductor.cabal  nlambda.cabal
src/: BetaReductor.hs  Lambda.hs  LambdaParser.hs
src/Language/: NLambda.hs
src/Language/NLambda/: Interpreter.hs  Parser.hs  Reductor.hs  SKI.hs
test/: BetaReductorSpec.hs  LambdaParserSpec.hs  LambdaSpec.hs  Spec.hs
test/Language/: NLambdaSpec.hs
test/Language/NLambda/: InterpreterSpec.hs  ParserSpec.hs  ReductorSpec.hs  SKISpec.hs
