name:                betareductor
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda
                     , BetaReductor
                     , LambdaParser
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.*
                     , parsec == 3.*
  ghc-options:         -Wall -Werror -O
  default-language:    Haskell2010

test-suite betareductor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LambdaSpec
                     , BetaReductorSpec
                     , LambdaParserSpec
  build-depends:       base >= 4.7 && < 5
                     , hspec == 2.*
                     , betareductor
                     , parsec == 3.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
