name:                nlambda
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.NLambda
                     , Language.NLambda.Reductor
                     , Language.NLambda.Parser
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.*
                     , parsec == 3.*
  ghc-options:         -Wall -Werror -O
  default-language:    Haskell2010

test-suite nlambda-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.NLambdaSpec
                     , Language.NLambda.ReductorSpec
                     , Language.NLambda.ParserSpec
  build-depends:       base >= 4.7 && < 5
                     , hspec == 2.*
                     , nlambda
                     , parsec == 3.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010
